# vikarin_bot-config_api

./: .gitignore  Cargo.toml  README.md  bot_config.json  wrangler.toml
.github/workflows/: build-artifacts.yml  deploy.yml
scripts/: patch-build.mjs  patch-build.ps1
src/: lib.rs  main.rs
